project/syntax_tests/tests_input/unit/bad/Bad29.ty
singleton class Getter { 
    
    functions: {
        checkSomeImmediateAttribute: (person: Person) -> Bool = {
            person.BadName.name != "Ralph"
        }
    }
}
